--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/classnames": "^2.3.1",
+    "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "sass": "^1.37.5"
   },
   "devDependencies": {
     "@types/react": "17.0.17",
