--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.37.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
     "@types/react": "17.0.17",
     "typescript": "4.3.5"
   }
